[UPD] updUserReaction method, schema and query
